# xapian

./: .appveyor.yml  .clang-format  .cvsignore  .editorconfig  .gitignore  .travis.yml  Changes  Dockerfile  MANIFEST  MANIFEST.SKIP  META.yml  Makefile  Makefile.PL  README  README.branch  README.md  README.notmuch  TODO  Vagrantfile  Xapian.pm  Xapian.xs  autogen.sh  bootstrap  bootstrap-with-autotools  changelog  configure  control  control-php.in  control-ruby-new-oldlib.in  control-ruby-new.in  control.in  copyright  letor-bootstrap  libxapian-queryparserVERSION-dev.install  libxapian-ruby1.8.doc-base  libxapianVERSION-dev.install  libxapianVERSION.install  lseek-safety-test-win32.c  lseek-safety-test.c  merge-debian-packaging  (+19 more)
1.0/xapian-bindings/: ChangeLog  INSTALL  Makefile.am  NEWS  configure.ac  xapian-bindings.spec.in
1.2/xapian-bindings/: Makefile.am  NEWS
autoconf/: AUTHORS  BUGS  ChangeLog  ChangeLog.0  ChangeLog.1  ChangeLog.2  GNUmakefile  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  cfg.mk  configure  configure.ac  maint.mk
autoconf/build-aux/: announce-gen  elisp-comp  git-version-gen  gnupload  texinfo.tex
autoconf/doc/: Makefile.am  Makefile.in  autoconf.info  autoconf.texi  install.texi  make-stds.texi  standards.info  standards.texi  version.texi
autoconf/lib/: Makefile.am  Makefile.in  autom4te.in  freeze.mk
autoconf/m4/: m4.m4
autoconf/man/: Makefile.am  Makefile.in  autoconf.1  autoheader.1  autom4te.1  autoreconf.1  autoscan.1  autoupdate.1  config.guess.1  config.sub.1  ifnames.1
autoconf/tests/: Makefile.am  Makefile.in  acc.at  acfortran.at  acfunctions.at  acgeneral.at  acheaders.at  aclang.at  aclibs.at  acprograms.at  acspecific.at  acstatus.at  actypes.at  atlocal.in  autoscan.at  autotest.at  base.at  c.at  compile.at  foreign.at  fortran.at  local.at  m4sh.at  m4sugar.at  mktests.sh  semantics.at  suite.at  tools.at  torture.at  wrapper.as
automake/: AUTHORS  ChangeLog  ChangeLog.00  ChangeLog.01  ChangeLog.02  ChangeLog.03  ChangeLog.04  ChangeLog.96  ChangeLog.98  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.in  aclocal.m4  automake.in  configure  configure.ac
automake/doc/: Makefile.am  Makefile.in  automake.info  automake.info-1  automake.info-2  automake.texi  version.texi
automake/lib/: Makefile.am  Makefile.in  gnupload
automake/m4/: Makefile.am  Makefile.in  amversion.in  amversion.m4  depout.m4  dirlist  init.m4  substnot.m4
automake/tests/: ChangeLog-old  Makefile.am  Makefile.in  README  aclibobj.test  acloca10.test  acloca11.test  acloca12.test  acloca13.test  acloca14.test  acloca15.test  acloca16.test  acloca17.test  acloca18.test  acloca19.test  acloca20.test  acloca21.test  aclocal.in  aclocal.test  aclocal3.test  aclocal4.test  aclocal5.test  aclocal6.test  aclocal7.test  aclocal8.test  aclocal9.test  acoutbs.test  acoutnoq.test  acoutpt.test  acoutpt2.test  acoutqnl.test  acsilent.test  acsubst.test  acsubst2.test  all.test  alloca.test  alloca2.test  alpha.test  alpha2.test  amassign.test  (+581 more)
libtool/: AUTHORS  ChangeLog  ChangeLog.0  ChangeLog.1  ChangeLog.1996  ChangeLog.1997  ChangeLog.1998  ChangeLog.1999  ChangeLog.2000  ChangeLog.2001  ChangeLog.2002  ChangeLog.2003  ChangeLog.2004  ChangeLog.2005  ChangeLog.2006  ChangeLog.2007  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  bootstrap  config-h.in  configure  configure.ac  libtoolize.in  libtoolize.m4sh  ltdl.m4  ltmain.in  mkstamp
libtool/cdemo/: Makefile.am  Makefile.in  README  configure  configure.ac  foo.c  foo.h  main.c
libtool/demo/: Makefile.am  Makefile.in  configure  configure.ac  dlmain.c  foo.c  foo.h  hell2.c  hello.c  (+1 more)
xapian-bindings/: .cvsignore  .gitignore  ChangeLog  HACKING  INSTALL  Makefile.am  NEWS  NEWS.SKELETON  README  TODO  autogen.sh  changelog  configure.ac  configure.in  control-php.in  control-python.in  control-ruby.in  control.in  copyright  doxygen_xml.conf.in  etc-php-conf.d-xapian  fake_dbfactory.i  generate-no-exceptions-api  libxapian-ruby1.8.install  libxapian-ruby1.9.1.doc-base  libxapian-ruby1.9.install  patch  php4-xapian.install  php4-xapian.postinst  php4-xapian.prerm  php4-xapian.templates  php5-xapian.config  php5-xapian.install  php5-xapian.postinst  php5-xapian.prerm  python-xapian.install  python2.3-xapian.install  rules  skiptest  swig-depcomp  (+9 more)
xapian-core/: .cvsignore  .gitignore  AUTHORS  COPYING  COPYING_MIT  ChangeLog  ChangeLog.0  ChangeLog.examples  HACKING  INSTALL  Makefile.am  Makefile_common.am  NEWS  NEWS.SKELETON  PLATFORMS  README  README.source  TODO  acconfig.h  acinclude.m4  ar-wrapper-solaris  autogen.sh  bootstrap  brass-dump  buildall  changelog  configure.ac  configure.in  control.in  copyright  dir_contents  exception_data.pm  genacinclude.sh  generate-exceptions  generate-exceptions.in  libomus-config.in  libomus-config.nodep.in  libxapian15.install  libxapianVERSION-dev.install  libxapianVERSION.install  (+20 more)
xapian-examples/: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  acconfig.h  acinclude.m4  buildall  configure.ac  configure.in  copydatabase.cc  createdatabase.cc  delve.cc  getopt.cc  getopt.h  msearch.cc  quest.cc  simpleexpand.cc  simpleindex.cc  simplesearch.cc
xapian-extras/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac
xapian-extras-bindings/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  configure.ac
xapian-letor/: .gitignore  ChangeLog  INSTALL  Makefile.am  README  autoencoder.cc  autoencoder.h  configure.ac  default_normalizer.cc  default_normalizer.h  dir_contents  evalmetric.cc  evalmetric.h  exception_data.pm  feature.cc  feature.h  feature_manager.cc  feature_manager.h  feature_selector.cc  feature_selector.h  feature_vector.cc  feature_vector.h  featuremanager.cc  featuremanager.h  features.cc  features.h  featurevector.cc  featurevector.h  generate-exceptions  letor.cc  letor_features.cc  letor_features.h  letor_internal.cc  letor_internal.h  letor_internal_refactored.cc  listmle.cc  listmle.h  listnet.cc  listnet.h  makemanpage.in  (+10 more)
(+6353 files in other folders)
